--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <title>Vesco</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="img/favicon.ico">
-    <!-- required meta tags -->
+    <!-- unicode character encoding  -->
     <meta charset="utf-8">
+    <!-- microsoft edge compatible -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- mobile responsiveness -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- SEO optimization -->
+    <meta name="description" content="building modern, responsive website with html5, css3, jquery, and bootstrap framework">
+    <meta name="keywords" content="HTML5, CSS3, jQuery, Bootstrap, Web Design, Web Development, Responsive Website, Modern Website">
     <!-- google font -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i" rel="stylesheet">
     <!-- font-awesome 5 -->
@@ -695,13 +700,6 @@
         </a>
     </footer>
         
-
-
-
-
-
-
-
 
 
     <!-- jQuery -->
