--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- Nav -->
     <header>
 
-        <nav class="navbar navbar-fixed-top" role="navigation">
+        <nav class="navbar navbar-fixed-top">
 
             <div class="container-fluid">
                 
@@ -87,7 +87,7 @@
                 <div id="home-content-box-inner">
 
                     <div id="home-heading" class="animated zoomIn">
-                    	<h3>Watch Out <br> The Modern Responsive Website!</h3>
+                    	<h3>Watch Out<br>The Modern Responsive Website!</h3>
                     </div>
 
                     <div id="home-btn" class="animated zoomIn">
@@ -112,7 +112,7 @@
     			<div class="row">
 
     				<div class="col-md-4 col-sm-6">
-    					<div class="service-item">
+    					<div class="service-item wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
     						<div class="service-item-icon">
     							<i class="fas fa-paint-brush fa-3x"></i>
     						</div>
@@ -125,7 +125,7 @@
     					</div>
     				</div>
     				<div class="col-md-4 col-sm-6">
-    					<div class="service-item">
+    					<div class="service-item wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
     						<div class="service-item-icon">
     							<i class="fas fa-laptop fa-3x"></i>
     						</div>
@@ -138,7 +138,7 @@
     					</div>
     				</div>	
     				<div class="col-md-4 col-sm-6">
-    					<div class="service-item">
+    					<div class="service-item wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
     						<div class="service-item-icon">
     							<i class="fas fa-tablet fa-3x"></i>
     						</div>
@@ -151,7 +151,7 @@
     					</div>
     				</div>
     				<div class="col-md-4 col-sm-6">
-    					<div class="service-item">
+    					<div class="service-item wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
     						<div class="service-item-icon">
     							<i class="fas fa-search fa-3x"></i>
     						</div>
@@ -164,7 +164,7 @@
     					</div>
     				</div>
     				<div class="col-md-4 col-sm-6">
-    					<div class="service-item">
+    					<div class="service-item wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
     						<div class="service-item-icon">
     							<i class="far fa-edit fa-3x"></i>
     						</div>
@@ -177,7 +177,7 @@
     					</div>
     				</div>	
     				<div class="col-md-4 col-sm-6">
-    					<div class="service-item">
+    					<div class="service-item wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
     						<div class="service-item-icon">
     							<i class="far fa-life-ring fa-3x"></i>
     						</div>
@@ -216,7 +216,7 @@
                                     <p>Cillum reprehenderit enim laborum reprehenderit non ex est laborum proident ut eiusmod sed nulla eu laboris commodo officia nostrud fugiat exercitation eiusmod adipisicing aliqua tempor nulla ut pariatur nostrud deserunt in tempor adipisicing consequat amet dolor fugiat.</p>
                                 </div>
                                 <div id="about-btn" class="wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
-                                    <a class="btn btn-lg btn-general btn-blue" role="button" href="#work">Our Work</a>
+                                    <a class="btn btn-lg btn-general btn-blue" title="view work" role="button" href="#work">Our Work</a>
                                 </div>
                             </div> 
                         </div>
@@ -652,7 +652,7 @@
                     </div>
 
                     <div class="col-md-6">
-                        <h3>Contact Us</h3>
+                        <h3 id="contact-us">Contact Us</h3>
                         <form action="#">
                             <input type="text" name="full-name" placeholder="Full Name" class="form-control">
                             <input type="text" name="email" placeholder="email address" class="form-control">
@@ -695,7 +695,7 @@
             </div>
         </div>
 
-        <a href="#home" id="back-to-top" class="btn btn-sm btn-blue btn-back-to-top smooth-scroll" role="button" title="home">
+        <a href="#home" id="back-to-top" class="btn btn-sm btn-blue btn-back-to-top smooth-scroll hidden-sm hidden-xs" role="button" title="home">
             <i class="fas fa-angle-up"></i>
         </a>
     </footer>
