--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 
             <div class="container-fluid">
                 
-                <div class="vesco-nav-wrapper">
+                <div class="tetra-nav-wrapper">
 
                     <div class="navbar-header">
 
-                        <button type='button' class='navbar-toggle collapsed' data-toggle="collapse" data-target="#vesco-menu">
+                        <button type='button' class='navbar-toggle collapsed' data-toggle="collapse" data-target="#tetra-menu">
                             <span class="sr-only">Toggle navigation</span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
@@ -58,7 +58,7 @@
                         </a>
                     </div>
 
-                    <div id="vesco-menu" class="collapse navbar-collapse">
+                    <div id="tetra-menu" class="collapse navbar-collapse">
                         <ul class="nav navbar-nav">
                             <li><a class="smooth-scroll" href="#home">Home</a></li>
                             <li><a class="smooth-scroll" href="#services">Services</a></li>
@@ -210,7 +210,7 @@
                         <div id="about-content-box-outer">
                             <div id="about-content-box-inner">
                                 <div class="content-title wow animated fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
-                                    <h3>About Vesco</h3>
+                                    <h3>About Tetra</h3>
                                     <div class="content-title-underline"></div>
                                 </div>
                                 <div id="about-desc" class="wow animated fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
